@@ -1,9 +1,4 @@
 buildscript {
-  repositories {
-    mavenLocal()
-    mavenCentral()
-    jcenter()
-  }
   dependencies {
     classpath("net.serenity-bdd:serenity-gradle-plugin:2.0.83")
     classpath("net.serenity-bdd:serenity-single-page-report:2.1.4")
@@ -59,6 +54,14 @@ sourceSets {
     }
     resources.srcDir file('src/smokeTest/resources')
   }
+}
+
+
+repositories {
+  mavenLocal()
+  mavenCentral()
+  jcenter()
+  maven { url 'https://jitpack.io' }
 }
 
 tasks.withType(JavaCompile) {
@@ -201,6 +204,12 @@ def versions = [
   sonarPitest    : '0.5'
 ]
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 configurations {
   compileOnly {
     extendsFrom annotationProcessor
@@ -272,6 +281,7 @@ dependencies {
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
 
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
   testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0'
   testCompile group: 'org.testcontainers', name: 'postgresql', version: '1.15.1'
   testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.2.1.RELEASE'
